fixed card cover image cropping

--- a/public/styles/dark.css
+++ b/public/styles/dark.css
@@ -197,8 +197,9 @@ body {
         overflow: hidden;
 
         * {
-          max-width: 100%;
-          max-height: 100%;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
       }
 
